--- a/css/la_note_enchantée.css
+++ b/css/la_note_enchantée.css
@@ -1,10 +1,355 @@
 /* Shrikhand Regular 400*/
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Shrikhand&display=swap");
-/* Roboto Light 300 italic */
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto:ital,wght@1,300&family=Shrikhand&display=swap");
+/* Roboto */
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+/* Roboto Bold 700 */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
+  list-style-type: none;
 }
+
+a {
+  color: #353535;
+}
+
+a:visited {
+  color: #353535;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  /* HEADER */
+  .back_to_homepage {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-family: "Shrikhand", cursive;
+    font-weight: thin;
+    padding-block: 0.6em;
+  }
+  .back_to_homepage .fas {
+    font-size: 1.5em;
+    position: relative;
+    right: 1.5em;
+    top: 0.3em;
+  }
+  .back_to_homepage h1 {
+    font-size: 1.5em;
+  }
+  /* END OF HEADER */
+  /* CONTAINER */
+  .container {
+    width: 100%;
+  }
+  .container .banner {
+    width: 100%;
+  }
+  .container .banner img {
+    width: 100%;
+  }
+  /* END OF CONTAINER */
+  /* FOOD_MENU */
+  .food_menu {
+    background-color: #F6F6F6;
+    padding-inline: .8em;
+    padding-top: 2em;
+    z-index: 1;
+    margin-top: -2em;
+    border-top-right-radius: 31px;
+    border-top-left-radius: 31px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: relative;
+    margin-bottom: 4em;
+  }
+  .food_menu header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    left: .8em;
+    margin-bottom: 2em;
+    font-size: .8em;
+  }
+  .food_menu header h1 {
+    font-family: "Shrikhand", cursive;
+    font-weight: 500;
+  }
+  .food_menu header .far {
+    font-size: 1.8em;
+    position: absolute;
+    top: 0.20em;
+    right: 1.2em;
+    font-weight: 100;
+  }
+  .check_validate {
+    position: absolute;
+    right: 0;
+    background-color: #99E2D0;
+    padding: 1.73em;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 16px;
+    top: 0;
+    -webkit-transition-property: width,-webkit-transform;
+    transition-property: width,-webkit-transform;
+    transition-property: width,transform;
+    transition-property: width,transform,-webkit-transform;
+    -webkit-transition-duration: 700ms;
+            transition-duration: 700ms;
+    -webkit-transition-timing-function: ease-out;
+            transition-timing-function: ease-out;
+    width: 5%;
+    z-index: 9999;
+  }
+  .check_validate .fa-check-circle {
+    font-size: 1.8em;
+    color: white;
+    -webkit-transition-duration: 700ms;
+            transition-duration: 700ms;
+  }
+  /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
+  @-webkit-keyframes rotation {
+    from {
+      -webkit-transform: rotate(-360deg);
+              transform: rotate(-360deg);
+    }
+    to {
+      -webkit-transform: rotate(0);
+              transform: rotate(0);
+    }
+  }
+  @keyframes rotation {
+    from {
+      -webkit-transform: rotate(-360deg);
+              transform: rotate(-360deg);
+    }
+    to {
+      -webkit-transform: rotate(0);
+              transform: rotate(0);
+    }
+  }
+  /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
+  .item:hover > .check_validate {
+    width: 15%;
+    -webkit-transition-duration: 2s;
+            transition-duration: 2s;
+  }
+  .item:hover > .check_validate > .fa-check-circle {
+    -webkit-animation: rotation 700ms ease-out;
+            animation: rotation 700ms ease-out;
+  }
+  /* STARTER */
+  .starter {
+    font-family: "Roboto", sans-serif;
+  }
+  .starter .starter--title {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 1.1em;
+    position: relative;
+    left: .6em;
+    margin-bottom: .8em;
+    border-bottom: 1px solid #99E2D0;
+    border-width: 0.21em;
+    padding-bottom: .3em;
+    width: 2.6em;
+  }
+  .starter .item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1em;
+    -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
+    margin-bottom: 0.8em;
+    position: relative;
+    font-size: .8em;
+  }
+  .starter .item .item--description h2 {
+    margin-bottom: .2em;
+    font-weight: 600;
+  }
+  .starter .item .item__price {
+    position: absolute;
+    right: 2em;
+    top: 3em;
+    font-weight: bold;
+  }
+  .main_course {
+    font-family: "Roboto", sans-serif;
+  }
+  .main_course .main_course--title {
+    font-weight: 500;
+    font-size: 1.1em;
+    position: relative;
+    left: .6em;
+    margin-bottom: .8em;
+    margin-top: .8em;
+    border-bottom: 1px solid #99E2D0;
+    border-width: 0.21em;
+    padding-bottom: .3em;
+    width: 2.5em;
+  }
+  .main_course .item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1em;
+    -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
+    margin-bottom: 0.8em;
+    position: relative;
+    font-size: .8em;
+  }
+  .main_course .item .item--description h2 {
+    margin-bottom: .2em;
+    font-weight: 600;
+  }
+  .main_course .item .item__price {
+    position: absolute;
+    right: 2em;
+    top: 3em;
+    font-weight: bold;
+  }
+  .desserts {
+    font-family: "Roboto", sans-serif;
+    margin-bottom: 2em;
+  }
+  .desserts .desserts--title {
+    font-weight: 500;
+    font-size: 1.2em;
+    position: relative;
+    left: .6em;
+    margin-bottom: .8em;
+    margin-top: .8em;
+    border-bottom: 1px solid #99E2D0;
+    border-width: 0.21em;
+    padding-bottom: .3em;
+    width: 2.5em;
+  }
+  .desserts .item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1em;
+    -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
+    margin-bottom: 0.8em;
+    position: relative;
+    font-size: .8em;
+  }
+  .desserts .item .item--description h2 {
+    margin-bottom: .2em;
+    font-weight: 600;
+  }
+  .desserts .item .item__price {
+    position: absolute;
+    right: 2em;
+    top: 3em;
+    font-weight: bold;
+  }
+  .button {
+    padding: 0.9em 1.5em;
+    border-radius: 30px;
+    /* Temporary */
+    background-image: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
+    background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
+    margin-top: 10px;
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+    -webkit-box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
+            box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
+  }
+  .button a {
+    color: white;
+  }
+  /* END OF MENU */
+  /* FOOTER */
+  footer {
+    background-color: #353535;
+    color: white;
+  }
+  .more_information {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-family: "Roboto", sans-serif;
+    gap: 10px;
+    margin-left: 4em;
+  }
+  .more_information h1 {
+    font-family: "Shrikhand", cursive;
+    margin-bottom: 0.5em;
+    position: relative;
+    right: 42px;
+    margin-top: 1em;
+    font-weight: 500;
+    font-size: 1.2em;
+    cursor: pointer;
+  }
+  .icon_description {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 10px;
+    font-size: 1em;
+    position: relative;
+    right: 2.5em;
+    cursor: pointer;
+  }
+  .icon_description .fas {
+    position: relative;
+    top: 2px;
+    font-size: 0.9em;
+  }
+  .icon_description--2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 10px;
+    position: relative;
+    right: 2.5em;
+    font-size: 1em;
+    cursor: pointer;
+  }
+  .icon_description--2 .fas {
+    position: relative;
+    top: 2px;
+    font-size: 0.9em;
+  }
+  .list {
+    position: relative;
+    right: 39px;
+    font-size: 1em;
+    cursor: pointer;
+    margin-bottom: 2em;
+  }
+  .list li {
+    line-height: 30px;
+  }
+  /* END OF FOOTER */
+}
+
+/* END OF MEDIA QUERIES */
 /*# sourceMappingURL=la_note_enchantée.css.map */
